<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:paddingBottom="16dp"
            android:paddingTop="12dp"
            android:src="@drawable/digitalpies" />

        <LinearLayout
            android:id="@+id/barOuter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <LinearLayout
                android:id="@+id/barInner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_line" />
        </LinearLayout>

        <TextView
            android:id="@+id/about1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/about_1"
            android:textColor="#CC444444"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="12dp"
            android:text="@string/website"
            android:textColor="#CC444444"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/email"
            android:textColor="#CC444444"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/twitter"
            android:gravity="center"
            android:paddingTop="12dp"
            android:text="@string/twitter"
            android:textColor="#CC444444"
            android:textIsSelectable="true"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>