<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/walk_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/walk_name_hint"
        android:inputType="textAutoCorrect|textCapSentences" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/walk_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/walk_description_hint" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:shrinkColumns="0"
                android:stretchColumns="0" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

	                <EditText
	                    android:id="@+id/walk_tags"
	                    android:layout_gravity="bottom"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:hint="@string/tags"
	                    android:inputType="textAutoCorrect"
	                    android:scrollHorizontally="true" />
	
	                <ImageButton
	                    android:id="@+id/new_tag_button"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:contentDescription="@string/add_tag"
	                    android:src="@drawable/ic_menu_new_tag" />

                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/tags_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>