<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            android:id="@+id/walk_details_description_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textIsSelectable="true"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/walk_details_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:textIsSelectable="true"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/walk_details_tags_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tags_with_colon"
            android:textIsSelectable="true"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/walk_details_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:textIsSelectable="true"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/walk_started_at"
            android:textIsSelectable="true"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/walk_details_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:textIsSelectable="true"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/walk_distance"
            android:textIsSelectable="true"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/walk_details_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:textIsSelectable="true"
            android:textSize="15dp" />
    </LinearLayout>

</ScrollView>